# claude-agent

./: .env.example  .gitignore  Dockerfile  main.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt
.claude/: CLAUDE.md  settings.json
src/agent/: __init__.py  client.py  config.py
tests/: test_agent.py
